tests/typing/errors/bad_term_arity/non_poly_flexible.ae
logic ac u : int, int -> int
goal g: u(0, 0, 0) = 0
